CSS en reportes

--- a/Reportes/reporte.html
+++ b/Reportes/reporte.html
@@ -2,17 +2,18 @@
 <html>
 <head>
 <title>Reporte del sistema</title>
+<link rel="stylesheet" href="Style.css">
 </head>
 <body>
 <center>
 <h1>Listado de clientes en el sistema</h1>
 <br>
-<table border =1>
+<table>
 <tr>
-<td>NIT</td><td>Nombre</td><td>Edad</td><td>Genero</td>
+<th>NIT</th><th>Nombre</th><th>Edad</th><th>Género</th>
 </tr>
 <tr>
-<td>147852</td><td>Marta</td><td>20</td><td>F
+<td>147852</td><td>Marta</td><td>20</td><td>F</td>
 </tr>
 </table>
 </center>
