Mejora en el estilo html y parte teorica

--- a/Reportes/reporte.html
+++ b/Reportes/reporte.html
@@ -13,7 +13,301 @@
 <th>NIT</th><th>Nombre</th><th>Edad</th><th>Género</th>
 </tr>
 <tr>
+<td>745832</td><td>Carmen Ruano</td><td>56</td><td>F</td>
+</tr>
+<tr>
+<td>745832</td><td>Carmen Ruano</td><td>56</td><td>F</td>
+</tr>
+<tr>
+<td>745832</td><td>Carmen Ruano</td><td>56</td><td>F</td>
+</tr>
+<tr>
+<td>745832</td><td>Carmen Ruano</td><td>56</td><td>F</td>
+</tr>
+<tr>
+<td>745832</td><td>Carmen Ruano</td><td>56</td><td>F</td>
+</tr>
+<tr>
+<td>745832</td><td>Carmen Ruano</td><td>56</td><td>F</td>
+</tr>
+<tr>
+<td>745832</td><td>Carmen Ruano</td><td>56</td><td>F</td>
+</tr>
+<tr>
+<td>745832</td><td>Carmen Ruano</td><td>56</td><td>F</td>
+</tr>
+<tr>
+<td>745832</td><td>Carmen Ruano</td><td>56</td><td>F</td>
+</tr>
+<tr>
+<td>745832</td><td>Carmen Ruano</td><td>56</td><td>F</td>
+</tr>
+<tr>
+<td>745832</td><td>Carmen Ruano</td><td>56</td><td>F</td>
+</tr>
+<tr>
+<td>745832</td><td>Carmen Ruano</td><td>56</td><td>F</td>
+</tr>
+<tr>
+<td>698321</td><td>Mirna Sian</td><td>45</td><td>F</td>
+</tr>
+<tr>
+<td>698321</td><td>Mirna Sian</td><td>45</td><td>F</td>
+</tr>
+<tr>
+<td>698321</td><td>Mirna Sian</td><td>45</td><td>F</td>
+</tr>
+<tr>
+<td>698321</td><td>Mirna Sian</td><td>45</td><td>F</td>
+</tr>
+<tr>
+<td>698321</td><td>Mirna Sian</td><td>45</td><td>F</td>
+</tr>
+<tr>
+<td>698321</td><td>Mirna Sian</td><td>45</td><td>F</td>
+</tr>
+<tr>
+<td>698321</td><td>Mirna Sian</td><td>45</td><td>F</td>
+</tr>
+<tr>
+<td>698321</td><td>Mirna Sian</td><td>45</td><td>F</td>
+</tr>
+<tr>
+<td>698321</td><td>Mirna Sian</td><td>45</td><td>F</td>
+</tr>
+<tr>
+<td>698321</td><td>Mirna Sian</td><td>45</td><td>F</td>
+</tr>
+<tr>
+<td>698321</td><td>Mirna Sian</td><td>45</td><td>F</td>
+</tr>
+<tr>
+<td>698321</td><td>Mirna Sian</td><td>45</td><td>F</td>
+</tr>
+<tr>
+<td>321987</td><td>Clara Sian</td><td>35</td><td>F</td>
+</tr>
+<tr>
+<td>321987</td><td>Clara Sian</td><td>35</td><td>F</td>
+</tr>
+<tr>
+<td>321987</td><td>Clara Sian</td><td>35</td><td>F</td>
+</tr>
+<tr>
+<td>321987</td><td>Clara Sian</td><td>35</td><td>F</td>
+</tr>
+<tr>
+<td>321987</td><td>Clara Sian</td><td>35</td><td>F</td>
+</tr>
+<tr>
+<td>321987</td><td>Clara Sian</td><td>35</td><td>F</td>
+</tr>
+<tr>
+<td>321987</td><td>Clara Sian</td><td>35</td><td>F</td>
+</tr>
+<tr>
+<td>321987</td><td>Clara Sian</td><td>35</td><td>F</td>
+</tr>
+<tr>
+<td>321987</td><td>Clara Sian</td><td>35</td><td>F</td>
+</tr>
+<tr>
+<td>321987</td><td>Clara Sian</td><td>35</td><td>F</td>
+</tr>
+<tr>
+<td>321987</td><td>Clara Sian</td><td>35</td><td>F</td>
+</tr>
+<tr>
+<td>321987</td><td>Clara Sian</td><td>35</td><td>F</td>
+</tr>
+<tr>
+<td>321987</td><td>Clara Sian</td><td>35</td><td>F</td>
+</tr>
+<tr>
+<td>588989</td><td>Luigi Bros</td><td>31</td><td>M</td>
+</tr>
+<tr>
+<td>588989</td><td>Luigi Bros</td><td>31</td><td>M</td>
+</tr>
+<tr>
+<td>588989</td><td>Luigi Bros</td><td>31</td><td>M</td>
+</tr>
+<tr>
+<td>588989</td><td>Luigi Bros</td><td>31</td><td>M</td>
+</tr>
+<tr>
+<td>588989</td><td>Luigi Bros</td><td>31</td><td>M</td>
+</tr>
+<tr>
+<td>588989</td><td>Luigi Bros</td><td>31</td><td>M</td>
+</tr>
+<tr>
+<td>588989</td><td>Luigi Bros</td><td>31</td><td>M</td>
+</tr>
+<tr>
+<td>588989</td><td>Luigi Bros</td><td>31</td><td>M</td>
+</tr>
+<tr>
+<td>588989</td><td>Luigi Bros</td><td>31</td><td>M</td>
+</tr>
+<tr>
+<td>588989</td><td>Luigi Bros</td><td>31</td><td>M</td>
+</tr>
+<tr>
+<td>588989</td><td>Luigi Bros</td><td>31</td><td>M</td>
+</tr>
+<tr>
+<td>588989</td><td>Luigi Bros</td><td>31</td><td>M</td>
+</tr>
+<tr>
+<td>369852</td><td>Miriam Cortez</td><td>25</td><td>F</td>
+</tr>
+<tr>
+<td>369852</td><td>Miriam Cortez</td><td>25</td><td>F</td>
+</tr>
+<tr>
+<td>369852</td><td>Miriam Cortez</td><td>25</td><td>F</td>
+</tr>
+<tr>
+<td>369852</td><td>Miriam Cortez</td><td>25</td><td>F</td>
+</tr>
+<tr>
+<td>369852</td><td>Miriam Cortez</td><td>25</td><td>F</td>
+</tr>
+<tr>
+<td>369852</td><td>Miriam Cortez</td><td>25</td><td>F</td>
+</tr>
+<tr>
+<td>369852</td><td>Miriam Cortez</td><td>25</td><td>F</td>
+</tr>
+<tr>
+<td>369852</td><td>Miriam Cortez</td><td>25</td><td>F</td>
+</tr>
+<tr>
+<td>369852</td><td>Miriam Cortez</td><td>25</td><td>F</td>
+</tr>
+<tr>
+<td>369852</td><td>Miriam Cortez</td><td>25</td><td>F</td>
+</tr>
+<tr>
+<td>369852</td><td>Miriam Cortez</td><td>25</td><td>F</td>
+</tr>
+<tr>
+<td>369852</td><td>Miriam Cortez</td><td>25</td><td>F</td>
+</tr>
+<tr>
 <td>147852</td><td>Marta</td><td>20</td><td>F</td>
+</tr>
+<tr>
+<td>456987</td><td>Fernando Mendez</td><td>20</td><td>M</td>
+</tr>
+<tr>
+<td>456987</td><td>Fernando Mendez</td><td>20</td><td>M</td>
+</tr>
+<tr>
+<td>456987</td><td>Fernando Mendez</td><td>20</td><td>M</td>
+</tr>
+<tr>
+<td>456987</td><td>Fernando Mendez</td><td>20</td><td>M</td>
+</tr>
+<tr>
+<td>456987</td><td>Fernando Mendez</td><td>20</td><td>M</td>
+</tr>
+<tr>
+<td>456987</td><td>Fernando Mendez</td><td>20</td><td>M</td>
+</tr>
+<tr>
+<td>456987</td><td>Fernando Mendez</td><td>20</td><td>M</td>
+</tr>
+<tr>
+<td>456987</td><td>Fernando Mendez</td><td>20</td><td>M</td>
+</tr>
+<tr>
+<td>456987</td><td>Fernando Mendez</td><td>20</td><td>M</td>
+</tr>
+<tr>
+<td>456987</td><td>Fernando Mendez</td><td>20</td><td>M</td>
+</tr>
+<tr>
+<td>456987</td><td>Fernando Mendez</td><td>20</td><td>M</td>
+</tr>
+<tr>
+<td>456987</td><td>Fernando Mendez</td><td>20</td><td>M</td>
+</tr>
+<tr>
+<td>456987</td><td>Fernando Mendez</td><td>20</td><td>M</td>
+</tr>
+<tr>
+<td>741258</td><td>Carlos Cortez</td><td>19</td><td>M</td>
+</tr>
+<tr>
+<td>741258</td><td>Carlos Cortez</td><td>19</td><td>M</td>
+</tr>
+<tr>
+<td>741258</td><td>Carlos Cortez</td><td>19</td><td>M</td>
+</tr>
+<tr>
+<td>741258</td><td>Carlos Cortez</td><td>19</td><td>M</td>
+</tr>
+<tr>
+<td>741258</td><td>Carlos Cortez</td><td>19</td><td>M</td>
+</tr>
+<tr>
+<td>741258</td><td>Carlos Cortez</td><td>19</td><td>M</td>
+</tr>
+<tr>
+<td>741258</td><td>Carlos Cortez</td><td>19</td><td>M</td>
+</tr>
+<tr>
+<td>741258</td><td>Carlos Cortez</td><td>19</td><td>M</td>
+</tr>
+<tr>
+<td>741258</td><td>Carlos Cortez</td><td>19</td><td>M</td>
+</tr>
+<tr>
+<td>741258</td><td>Carlos Cortez</td><td>19</td><td>M</td>
+</tr>
+<tr>
+<td>741258</td><td>Carlos Cortez</td><td>19</td><td>M</td>
+</tr>
+<tr>
+<td>741258</td><td>Carlos Cortez</td><td>19</td><td>M</td>
+</tr>
+<tr>
+<td>159357</td><td>Jairo Samayoa</td><td>18</td><td>M</td>
+</tr>
+<tr>
+<td>159357</td><td>Jairo Samayoa</td><td>18</td><td>M</td>
+</tr>
+<tr>
+<td>159357</td><td>Jairo Samayoa</td><td>18</td><td>M</td>
+</tr>
+<tr>
+<td>159357</td><td>Jairo Samayoa</td><td>18</td><td>M</td>
+</tr>
+<tr>
+<td>159357</td><td>Jairo Samayoa</td><td>18</td><td>M</td>
+</tr>
+<tr>
+<td>159357</td><td>Jairo Samayoa</td><td>18</td><td>M</td>
+</tr>
+<tr>
+<td>159357</td><td>Jairo Samayoa</td><td>18</td><td>M</td>
+</tr>
+<tr>
+<td>159357</td><td>Jairo Samayoa</td><td>18</td><td>M</td>
+</tr>
+<tr>
+<td>159357</td><td>Jairo Samayoa</td><td>18</td><td>M</td>
+</tr>
+<tr>
+<td>159357</td><td>Jairo Samayoa</td><td>18</td><td>M</td>
+</tr>
+<tr>
+<td>159357</td><td>Jairo Samayoa</td><td>18</td><td>M</td>
+</tr>
+<tr>
+<td>159357</td><td>Jairo Samayoa</td><td>18</td><td>M</td>
 </tr>
 </table>
 </center>
