--- a/ReportesPRO/reporte.html
+++ b/ReportesPRO/reporte.html
@@ -13,13 +13,28 @@
 <th>Productos</th><th>Precios</th><th>Cantidades</th>
 </tr>
 <tr>
-<td>Camisa polo</td><td>25.5</td><td>2</td>
+<td>Pantalon lona azul</td><td>66.0</td><td>39</td>
 </tr>
 <tr>
-<td>Camisa polo Amarilla</td><td>25.5</td><td>Agotado</td>
+<td>Pantalon lona azul</td><td>66.0</td><td>39</td>
 </tr>
 <tr>
-<td>Camisa polo roja</td><td>25.5</td><td>Agotado</td>
+<td>Pantalon lona azul</td><td>66.0</td><td>39</td>
+</tr>
+<tr>
+<td>Pantalon lona azul</td><td>66.0</td><td>39</td>
+</tr>
+<tr>
+<td>Pantalon lona azul</td><td>66.0</td><td>39</td>
+</tr>
+<tr>
+<td>Pantalon lona azul</td><td>66.0</td><td>39</td>
+</tr>
+<tr>
+<td>Pantalon lona azul</td><td>66.0</td><td>39</td>
+</tr>
+<tr>
+<td>Pantalon lona azul</td><td>66.0</td><td>39</td>
 </tr>
 <tr>
 <td>Pantalon lona azul</td><td>66.0</td><td>39</td>
@@ -34,10 +49,166 @@
 <td>Blusa verde</td><td>27.99</td><td>56</td>
 </tr>
 <tr>
+<td>Blusa roja</td><td>27.99</td><td>36</td>
+</tr>
+<tr>
+<td>Blusa azul</td><td>27.99</td><td>45</td>
+</tr>
+<tr>
+<td>Blusa verde</td><td>27.99</td><td>56</td>
+</tr>
+<tr>
+<td>Blusa roja</td><td>27.99</td><td>36</td>
+</tr>
+<tr>
+<td>Blusa azul</td><td>27.99</td><td>45</td>
+</tr>
+<tr>
+<td>Blusa verde</td><td>27.99</td><td>56</td>
+</tr>
+<tr>
+<td>Blusa roja</td><td>27.99</td><td>36</td>
+</tr>
+<tr>
+<td>Blusa azul</td><td>27.99</td><td>45</td>
+</tr>
+<tr>
+<td>Blusa verde</td><td>27.99</td><td>56</td>
+</tr>
+<tr>
+<td>Blusa roja</td><td>27.99</td><td>36</td>
+</tr>
+<tr>
+<td>Blusa azul</td><td>27.99</td><td>45</td>
+</tr>
+<tr>
+<td>Blusa verde</td><td>27.99</td><td>56</td>
+</tr>
+<tr>
+<td>Blusa roja</td><td>27.99</td><td>36</td>
+</tr>
+<tr>
+<td>Blusa azul</td><td>27.99</td><td>45</td>
+</tr>
+<tr>
+<td>Blusa verde</td><td>27.99</td><td>56</td>
+</tr>
+<tr>
+<td>Blusa roja</td><td>27.99</td><td>36</td>
+</tr>
+<tr>
+<td>Blusa azul</td><td>27.99</td><td>45</td>
+</tr>
+<tr>
+<td>Blusa verde</td><td>27.99</td><td>56</td>
+</tr>
+<tr>
+<td>Blusa roja</td><td>27.99</td><td>36</td>
+</tr>
+<tr>
+<td>Blusa azul</td><td>27.99</td><td>45</td>
+</tr>
+<tr>
+<td>Blusa verde</td><td>27.99</td><td>56</td>
+</tr>
+<tr>
+<td>Blusa roja</td><td>27.99</td><td>36</td>
+</tr>
+<tr>
+<td>Blusa azul</td><td>27.99</td><td>45</td>
+</tr>
+<tr>
+<td>Blusa verde</td><td>27.99</td><td>56</td>
+</tr>
+<tr>
+<td>Camisa polo</td><td>25.5</td><td>2</td>
+</tr>
+<tr>
+<td>Camisa polo Amarilla</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
+<td>Camisa polo roja</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
 <td>Camisa polo naranja</td><td>25.5</td><td>89</td>
 </tr>
 <tr>
 <td>Camisa polo negra</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
+<td>Camisa polo roja</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
+<td>Camisa polo naranja</td><td>25.5</td><td>89</td>
+</tr>
+<tr>
+<td>Camisa polo negra</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
+<td>Camisa polo roja</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
+<td>Camisa polo naranja</td><td>25.5</td><td>89</td>
+</tr>
+<tr>
+<td>Camisa polo negra</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
+<td>Camisa polo roja</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
+<td>Camisa polo naranja</td><td>25.5</td><td>89</td>
+</tr>
+<tr>
+<td>Camisa polo negra</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
+<td>Camisa polo roja</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
+<td>Camisa polo naranja</td><td>25.5</td><td>89</td>
+</tr>
+<tr>
+<td>Camisa polo negra</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
+<td>Camisa polo roja</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
+<td>Camisa polo naranja</td><td>25.5</td><td>89</td>
+</tr>
+<tr>
+<td>Camisa polo negra</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
+<td>Camisa polo roja</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
+<td>Camisa polo naranja</td><td>25.5</td><td>89</td>
+</tr>
+<tr>
+<td>Camisa polo negra</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
+<td>Camisa polo roja</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
+<td>Camisa polo naranja</td><td>25.5</td><td>89</td>
+</tr>
+<tr>
+<td>Camisa polo negra</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
+<td>Camisa polo roja</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
+<td>Camisa polo naranja</td><td>25.5</td><td>89</td>
+</tr>
+<tr>
+<td>Camisa polo negra</td><td>25.5</td><td>Agotado</td>
+</tr>
+<tr>
+<td>Fernando Mendez</td><td>20.0</td><td>Agotado</td>
 </tr>
 </table>
 </center>
